Cleanup and update chat feature to make it more stable